readying initial release

--- a/.gitignore
+++ b/.gitignore
@@ -319,8 +319,8 @@ __pycache__/
 *.pyc
 
 # Cake - Uncomment if you are using it
-# tools/**
-# !tools/packages.config
+tools/**
+!tools/packages.config
 
 # Tabs Studio
 *.tss
@@ -458,4 +458,4 @@ $RECYCLE.BIN/
 paket-files/
 
 # Playgrounds
-playground.fsx
+playground.fsx 
